# sharingminds

./: .env.example  .gitignore  ARCHITECTURE_DIAGRAM.html  ARCHITECTURE_DIAGRAM.md  content_system_analysis.md  package-lock.json  package.json  to change.md
services/infinity-ai/: README.md  langgraph.json  logs-runs.txt  pyproject.toml
services/infinity-ai/app/: __init__.py  main.py
services/infinity-ai/app/adapters/: platform_client.py
services/infinity-ai/app/api/: conversations.py  health.py
services/infinity-ai/app/composers/: __init__.py  response.py
services/infinity-ai/app/core/: config.py  errors.py  logging.py  security.py
services/infinity-ai/app/llm/: __init__.py  azure_provider.py  gemini_provider.py  groq_provider.py  openai_compatible_provider.py  openai_provider.py  openrouter_provider.py  prompts.py  provider.py  router.py  schemas.py
services/infinity-ai/app/matching/: allocation.py  models.py  resource_scoring.py  scoring.py
services/infinity-ai/app/memory/: models.py  summarizer.py
services/infinity-ai/app/observability/: smoke_log.py
services/infinity-ai/app/orchestration/: artifacts.py  budgets.py  context_pack.py  diagnostics.py  graph.py  pipeline.py  (+7 more)
services/infinity-ai/tests/: conftest.py  test_allocation.py  test_context_pack.py  test_graph_orchestration.py  test_llm_router_and_providers.py  test_llm_schemas.py  test_prompt_registry.py  test_quality_gates.py  test_response_blocks.py  test_response_repair.py  test_scoring.py  test_smoke_logging.py  test_state.py  test_supervisor_routes.py  test_turn_controller_sidecar.py
(+250 files in other folders)
