[project]
name = "infinity-ai"
version = "0.1.0"
description = "Python service boundary for the Infinity AI foundation."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115,<1.0",
  "google-genai>=2.6.0",
  "httpx>=0.27,<1.0",
  "langgraph>=1.0,<2.0",
  "openai>=2.0,<3.0",
  "pydantic>=2.8,<3.0",
  "pydantic-settings>=2.6,<3.0",
  "uvicorn[standard]>=0.30,<1.0",
]

[dependency-groups]
dev = [
  "pytest>=8.3,<9.0",
]
